# poem_agent

./: .env.template  .gitignore  README.md  openapi_spec.json  pyproject.toml
.deepseek/pastes/: paste-2026-06-08-094612-6dd0ee53.md
data/: .gitkeep
scripts/: _test_baidu.py  _test_desc.py  _test_weibo.py  capture_auth.py  probe_api.py  probe_feishu_ws.py  probe_full.py  test_api.py  test_feishu_ws.py  test_phase4.py  test_retrieve.py
src/: config.py  main.py
src/agent/: __init__.py  controller.py  evaluator.py  pipeline.py  selector.py
src/api/: auth.py  client.py  poems.py  reference.py
src/collectors/: hot_topics.py
src/config/: __init__.py  logger.py  prompts.py  settings.py
src/feishu/: __init__.py  batch_creator.py  bot.py  client.py  scheduler.py
src/llm/: __init__.py  base.py  deepseek.py  factory.py  openai.py
src/memory/: __init__.py  history.py  preference.py
src/skills/: __init__.py  base.py  registry.py
src/skills/hot_topic_poem/: __init__.py  prompt.py  workflow.py
src/tools/: __init__.py  registry.py
src/tools/handlers/: __init__.py  metrics.py  poem_api.py  search.py  skill_loader.py  storage.py
src/tools/schema/: __init__.py  poem.py  search.py  skill.py  storage.py
